--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
     
 
     <div class="article-style">
-      <p>Hello! My name is Jovana, and I am a PhD candidate in Applied Physics in the School of Engineering and Applied Sciences at Harvard University. Prior to Harvard, I received my bachelor’s degree in Engineering Physics at Cornell University in 2016. As a member of Prof. Chris Rycroft’s research group, I use computational approaches to study the crumpling dynamics of thin, elastoplastic sheets: how they deform, buckle, and develop rich, chaotic damage networks that exhibit surprising mathematical order. Broadly, I am interested in the intersection of physics-based modeling and data-driven methods to recognize patterns and structure in complex, disordered systems. Alongside research, I am passionate about teaching as well as creating graphics to promote science communication to a broader audience.</p>
+      <p>Hello! My name is Jovana, and I am a PhD candidate in Applied Physics in the School of Engineering and Applied Sciences at Harvard University. As a member of Prof. Chris Rycroft’s research group, I use computational approaches to study the crumpling dynamics of thin, elastoplastic sheets: how they deform, buckle, and develop rich, chaotic damage networks that exhibit surprising mathematical order. Broadly, I am interested in the intersection of physics-based modeling and data-driven methods to recognize patterns and structure in complex, disordered systems. Alongside research, I am passionate about teaching as well as creating graphics to promote science communication to a broader audience.</p>
 
     </div>
 
