--- a/publication/example/index.html
+++ b/publication/example/index.html
@@ -818,19 +818,19 @@
 
     <div class="space-below"></div>
 
-    <div class="article-style"><p>#<div class="alert alert-note"></p>
+    <div class="article-style"><h1 id="div-classalert-alert-note"><div class="alert alert-note"></h1>
   <div>
-    <p>#Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.</p>
+    <h1 id="click-the-cite-button-above-to-demo-the-feature-to-enable-visitors-to-import-publication-metadata-into-their-reference-management-software">Click the <em>Cite</em> button above to demo the feature to enable visitors to import publication metadata into their reference management software.</h1>
 <h1 id="heading"></h1>
   </div>
 </div>
-<p>#<div class="alert alert-note"></p>
+<h1 id="div-classalert-alert-note-1"><div class="alert alert-note"></h1>
   <div>
-    <p>#Create your slides in Markdown - click the <em>Slides</em> button to check out the example.</p>
+    <h1 id="create-your-slides-in-markdown---click-the-slides-button-to-check-out-the-example">Create your slides in Markdown - click the <em>Slides</em> button to check out the example.</h1>
 <h1 id="heading"></h1>
   </div>
 </div>
-<p>#Supplementary notes can be added here, including <a href="https://wowchemy.com/docs/writing-markdown-latex/" target="_blank" rel="noopener">code, math, and images</a>.</p>
+<h1 id="supplementary-notes-can-be-added-here-including-code-math-and-imageshttpswowchemycomdocswriting-markdown-latex">Supplementary notes can be added here, including <a href="https://wowchemy.com/docs/writing-markdown-latex/" target="_blank" rel="noopener">code, math, and images</a>.</h1>
 </div>
 
     
