--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -655,7 +655,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/example/" >A model for the fragmentation kinetics of crumpled thin sheets.</a>
+      <a href="/publication/example/" >A model for the fragmentation kinetics of crumpled thin sheets</a>
     </div>
 
     
