--- a/publication/index.html
+++ b/publication/index.html
@@ -753,7 +753,7 @@
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/publication/example/">A model for the fragmentation kinetics of crumpled thin sheets.</a>
+    <a href="/publication/example/">A model for the fragmentation kinetics of crumpled thin sheets</a>
   </div>
 
   
