--- a/index.html
+++ b/index.html
@@ -1222,13 +1222,7 @@
 
 <div class="col-12 col-lg-8">
 
-  <h1 id="div-classalert-alert-note"><div class="alert alert-note"></h1>
-  <div>
-    <h1 id="quickly-discover-relevant-content-by-filtering-publicationspublication">Quickly discover relevant content by <a href="./publication/">filtering publications</a>.</h1>
-<h1 id="heading"></h1>
-  </div>
-</div>
-
+  
 
   
     
@@ -1307,7 +1301,7 @@
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/publication/example/">A model for the fragmentation kinetics of crumpled thin sheets.</a>
+    <a href="/publication/example/">A model for the fragmentation kinetics of crumpled thin sheets</a>
   </div>
 
   
