Add image and reformat.

--- a/publication/index.html
+++ b/publication/index.html
@@ -751,13 +751,18 @@
   
   
   
+  
+  <a href="/publication/nat_commun_2021/">
+    <div class="img-hover-zoom"><img src="/publication/nat_commun_2021/featured_hu3e261d56443f78c19380cecaff5ce769_950524_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="A model for the fragmentation kinetics of crumpled thin sheets" loading="lazy"></div>
+  </a>
+  
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/publication/example/">A model for the fragmentation kinetics of crumpled thin sheets</a>
+    <a href="/publication/nat_commun_2021/">A model for the fragmentation kinetics of crumpled thin sheets</a>
   </div>
 
   
-  <a href="/publication/example/" class="summary-link">
+  <a href="/publication/nat_commun_2021/" class="summary-link">
     <div class="article-style">
       <p>As a confined thin sheet crumples, it spontaneously segments into flat facets delimited by a network of ridges. Despite the apparent disorder of this process, statistical properties of crumpled sheets exhibit striking reproducibility. Experiments have shown that the total crease length accrues logarithmically when repeatedly compacting and unfolding a sheet of paper. Here, we offer insight to this unexpected result by exploring the correspondence between crumpling and fragmentation processes. We identify a physical model for the evolution of facet area and ridge length distributions of crumpled sheets, and propose a mechanism for re-fragmentation driven by geometric frustration. This mechanism establishes a feedback loop in which the facet size distribution informs the subsequent rate of fragmentation under repeated confinement, thereby producing a new size distribution. We then demonstrate the capacity of this model to reproduce the characteristic logarithmic scaling of total crease length, thereby supplying a missing physical basis for the observed phenomenon.</p>
     </div>
@@ -782,7 +787,7 @@
 
 
 <a href="#" class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal"
-        data-filename="/publication/example/cite.bib">
+        data-filename="/publication/nat_commun_2021/cite.bib">
   Cite
 </a>
 
