--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -661,7 +661,7 @@
     
     <a href="/publication/nat_commun_2021/"  class="summary-link">
       <div class="article-style">
-        As a confined thin sheet crumples, it spontaneously segments into flat facets delimited by a network of ridges. Despite the apparent …
+        Jovana Andrejevic, Lisa M. Lee, Shmuel M. Rubinstein, and Chris H. Rycroft Nature Communications, March 2021
       </div>
     </a>
     
