--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,8 @@
 
       
       <div class="article-style">
-        <p>Jovana Andrejevic, Lisa M. Lee, Shmuel M. Rubinstein, and Chris H. Rycroft Nature Communications, March 2021</p>
+        <p>Jovana Andrejevic, Lisa M. Lee, Shmuel M. Rubinstein, Chris H. Rycroft
+Nature Communications, March 2021</p>
       </div>
       
 
