--- a/publication/index.html
+++ b/publication/index.html
@@ -525,7 +525,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/#featured"><span>Publications</span></a>
+          <a class="nav-link " href="/#publications"><span>Publications</span></a>
         </li>
 
         
@@ -745,8 +745,7 @@
   
   <a href="/publication/nat_commun_2021/" class="summary-link">
     <div class="article-style">
-      <p>Jovana Andrejevic, Lisa M. Lee, Shmuel M. Rubinstein, Chris H. Rycroft
-Nature Communications, March 2021</p>
+      <p>Jovana Andrejevic, Lisa M. Lee, Shmuel M. Rubinstein, Chris H. Rycroft, <em>Nature Communications</em>, March 2021</p>
     </div>
   </a>
   
