--- a/publication/sci_adv_2019/index.html
+++ b/publication/sci_adv_2019/index.html
@@ -728,7 +728,7 @@
 
 <div class="btn-links mb-3">
   
-  <a class="btn btn-outline-primary my-1" href="https://www.science.org/doi/10.1126/sciadv.aau6792" target="_blank" rel="noopener">Go to Project Site</a>
+  <a class="btn btn-outline-primary my-1" href="https://doi.org/10.1126/sciadv.aau6792" target="_blank" rel="noopener">Go to Project Site</a>
   
   
 
