--- a/teaching/summary/index.html
+++ b/teaching/summary/index.html
@@ -294,7 +294,7 @@ As a second-year student, I had the opportunity to work with Prof." />
   
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://jandrejevic12.github.io/teaching/summary/" />
-  <meta property="og:title" content=" | Academic" />
+  <meta property="og:title" content="Teaching experience | Academic" />
   <meta property="og:description" content="My teaching experience during graduate studies has included assisting undergraduate and graduate level courses, developing a student-led mini-course, as well as formal training in effective pedagogy.
 As a second-year student, I had the opportunity to work with Prof." /><meta property="og:image" content="https://jandrejevic12.github.io/teaching/summary/featured.jpg" />
     <meta property="twitter:image" content="https://jandrejevic12.github.io/teaching/summary/featured.jpg" /><meta property="og:locale" content="en-us" />
@@ -317,7 +317,7 @@ As a second-year student, I had the opportunity to work with Prof." /><meta prop
 
 
 
-  <title> | Academic</title>
+  <title>Teaching experience | Academic</title>
 </head>
 
 
@@ -663,7 +663,7 @@ As a second-year student, I had the opportunity to work with Prof." /><meta prop
 
 
 <div class="article-container pt-3">
-  <h1></h1>
+  <h1>Teaching experience</h1>
 
   
 
