--- a/index.html
+++ b/index.html
@@ -861,7 +861,8 @@
     
 
     <div class="article-style">
-      <p>Hello! My name is Jovana, and I am a PhD candidate in Applied Physics in the School of Engineering and Applied Sciences at Harvard University. As a member of Prof. Chris Rycroft’s research group, I use computational approaches to study the crumpling dynamics of thin, elastoplastic sheets: how they deform, buckle, and develop rich, chaotic damage networks that exhibit surprising mathematical order. Broadly, I am interested in the intersection of physics-based modeling and data-driven methods to recognize patterns and structure in complex, disordered systems. Alongside research, I am passionate about teaching as well as creating graphics to promote science communication to a broader audience.</p>
+      <p>Hello! My name is Jovana, and I am a PhD candidate in Applied Physics in the School of Engineering and Applied Sciences at Harvard University. As a member of <a href="https://people.seas.harvard.edu/~chr/" target="_blank" rel="noopener">Prof. Chris Rycroft’s research group</a>, I use computational approaches to study the crumpling dynamics of thin, elastoplastic sheets: how they deform, buckle, and develop rich, chaotic damage networks that exhibit surprising mathematical order. Broadly, I am interested in the intersection of physics-based modeling and data-driven methods to recognize patterns and structure in complex, disordered systems. Alongside research, I am passionate about teaching as well as creating graphics to promote science communication to a broader audience.</p>
+<p>A copy of my current CV is <a href="uploads/resume.pdf">available here.</a></p>
 
     </div>
 
