--- a/index.html
+++ b/index.html
@@ -1660,11 +1660,11 @@
   <div class="col-12 col-lg-8">
 
     
-    
+    <h1>Teaching</h1>
 
     <div class="article-style">
       <p>My teaching experience during graduate studies has included assisting undergraduate and graduate level courses, developing a student-led mini-course, as well as formal training in effective pedagogy. <a href="https://jandrejevic12.github.io/teaching/summary/" title="Teaching Summary">Read more</a></p>
-<h2 id="courses-taught">Courses taught</h2>
+<h3 id="courses-taught">Courses taught</h3>
 <ul>
 <li>Applied Physics 50A - Physics as a Foundation for Science and Engineering I (Fall 2017)</li>
 <li>Applied Physics 50B - Physics as a Foundation for Science and Engineering II (Spring 2018)</li>
