--- a/teaching/teaching_summary/index.html
+++ b/teaching/teaching_summary/index.html
@@ -704,14 +704,14 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h3 id="at-a-glance">At a glance</h3>
+      <h3 id="at-a-glance">At a Glance</h3>
 <p>My teaching experience during graduate studies at Harvard University has included assisting undergraduate and graduate level courses, developing a student-led mini-course, as well as formal training in effective pedagogy.</p>
 <p>I served as Teaching Fellow for the following courses:</p>
 <ul>
-<li>Applied Physics 50A - Physics as a Foundation for Science and Engineering I (Fall 2017)</li>
-<li>Applied Physics 50B - Physics as a Foundation for Science and Engineering II (Spring 2018)</li>
-<li>Engineering Sciences 301 - SEAS Teaching Practicum (Fall 2019)</li>
-<li>Applied Math 205 - Advanced Scientific Computing: Numerical Methods (Fall 2020, Fall 2021)</li>
+<li>Applied Physics 50A - Physics as a Foundation for Science and Engineering I</li>
+<li>Applied Physics 50B - Physics as a Foundation for Science and Engineering II</li>
+<li>Engineering Sciences 301 - SEAS Teaching Practicum</li>
+<li>Applied Math 205 - Advanced Scientific Computing: Numerical Methods</li>
 </ul>
 <p>My teaching philosophy statement is <a href="uploads/teaching_statement.pdf">available here.</a></p>
 <h3 id="graduate-teaching-experience">Graduate Teaching Experience</h3>
