Generative art update.

--- a/project/generative_art/index.html
+++ b/project/generative_art/index.html
@@ -804,7 +804,8 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>Together with Nina Andrejevic, George Varnavides, and Amina Matt, I helped to design and co-facilitate a winter workshop on generative art at MIT in January of 2020. The course emphasizes mathematical and natural examples of pattern formation such as fractals, cellular automata, swarming and self-organization, and emergent structure in reaction-diffusion processes. The content of the course includes both relevant theory behind these examples, as well as effective strategies for implementation in code. A fun introductory example is the following implementation of the Koch curve, magnified up to 243 times:</p>
+      <p>Together with Nina Andrejevic, George Varnavides, and Amina Matt, I helped to design and co-facilitate a winter workshop on generative art at MIT in January of 2020. The course emphasizes mathematical and natural examples of pattern formation such as fractals, cellular automata, swarming and self-organization, and emergent structure in reaction-diffusion processes. The content of the course includes both relevant theory behind these examples, as well as effective strategies for implementation in code.</p>
+<p>Material from past iterations can be found on the course&rsquo;s <a href="https://github.com/gvarnavi/generative-art-iap" target="_blank" rel="noopener">Github repository</a>.</p>
 
 
 
@@ -823,26 +824,6 @@
 <video autoplay loop  >
   <source src="/project/generative_art/koch_curve.mp4" type="video/mp4">
 </video>
-<p>We also explore cellular automata in 2D, such as the following pattern:</p>
-
-
-
-
-
-
-
-
-
-  
-
-
-
-
-
-<video autoplay loop  >
-  <source src="/project/generative_art/cell_automata.mp4" type="video/mp4">
-</video>
-<p>Material from past iterations can be found on the course&rsquo;s <a href="https://github.com/gvarnavi/generative-art-iap" target="_blank" rel="noopener">Github repository</a>.</p>
 
     </div>
 
