--- a/project/generative_art/index.html
+++ b/project/generative_art/index.html
@@ -293,7 +293,7 @@
   
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://jandrejevic12.github.io/project/generative_art/" />
-  <meta property="og:title" content="Generative Art Workshop | Academic" />
+  <meta property="og:title" content="Generative art workshop | Academic" />
   <meta property="og:description" content="Together with Nina Andrejevic, George Varnavides, and Amina Matt, I helped to design and co-facilitate a winter workshop on generative art at MIT in January of 2020. The course emphasizes mathematical and natural examples of pattern formation such as fractals, cellular automata, swarming and self-organization, and emergent structure in reaction-diffusion processes." /><meta property="og:image" content="https://jandrejevic12.github.io/project/generative_art/featured.jpg" />
     <meta property="twitter:image" content="https://jandrejevic12.github.io/project/generative_art/featured.jpg" /><meta property="og:locale" content="en-us" />
   
@@ -327,7 +327,7 @@
     "@type": "WebPage",
     "@id": "https://jandrejevic12.github.io/project/generative_art/"
   },
-  "headline": "Generative Art Workshop",
+  "headline": "Generative art workshop",
   
   "image": [
     "https://jandrejevic12.github.io/project/generative_art/featured.jpg"
@@ -365,7 +365,7 @@
 
 
 
-  <title>Generative Art Workshop | Academic</title>
+  <title>Generative art workshop | Academic</title>
 </head>
 
 
@@ -704,7 +704,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Generative Art Workshop</h1>
+  <h1>Generative art workshop</h1>
 
   
 
