--- a/project/pca_van_gogh/index.html
+++ b/project/pca_van_gogh/index.html
@@ -933,7 +933,7 @@
     <h3>Related</h3>
     <ul>
       
-      <li><a href="/project/generative_art/">Generative Art Workshop</a></li>
+      <li><a href="/project/generative_art/">Generative art workshop</a></li>
       
     </ul>
   </div>
