--- a/graphics/bobtail_squid/index.html
+++ b/graphics/bobtail_squid/index.html
@@ -293,7 +293,7 @@
   
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://jandrejevic12.github.io/graphics/bobtail_squid/" />
-  <meta property="og:title" content="Lights. Camera. Action! How the Hawaiian bobtail squid brings a creative vision to its maritime world of small big screens | Academic" />
+  <meta property="og:title" content=" | Academic" />
   <meta property="og:description" content="" /><meta property="og:image" content="https://jandrejevic12.github.io/graphics/bobtail_squid/featured.png" />
     <meta property="twitter:image" content="https://jandrejevic12.github.io/graphics/bobtail_squid/featured.png" /><meta property="og:locale" content="en-us" />
   
@@ -320,7 +320,7 @@
 
 
 
-  <title>Lights. Camera. Action! How the Hawaiian bobtail squid brings a creative vision to its maritime world of small big screens | Academic</title>
+  <title> | Academic</title>
 </head>
 
 
@@ -659,7 +659,7 @@
 
 
 <div class="article-container pt-3">
-  <h1>Lights. Camera. Action! How the Hawaiian bobtail squid brings a creative vision to its maritime world of small big screens</h1>
+  <h1></h1>
 
   
 
