--- a/graphics/bobtail_squid/index.html
+++ b/graphics/bobtail_squid/index.html
@@ -702,6 +702,41 @@
 
 
 
+<div class="btn-links mb-3">
+  
+  <a class="btn btn-outline-primary my-1" href="https://sitn.hms.harvard.edu/flash/2021/lights-camera-action-how-the-hawaiian-bobtail-squid-brings-a-creative-vision-to-its-maritime-world-of-small-big-screens/" target="_blank" rel="noopener">Go to Project Site</a>
+  
+  
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 
 </div>
 
