Update images to 2:1 ratio

--- a/publication/index.html
+++ b/publication/index.html
@@ -822,7 +822,7 @@
   
   
   <a href="/publication/nat_commun_2021/">
-    <div class="img-hover-zoom"><img src="/publication/nat_commun_2021/featured_hu3e261d56443f78c19380cecaff5ce769_950524_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="A model for the fragmentation kinetics of crumpled thin sheets" loading="lazy"></div>
+    <div class="img-hover-zoom"><img src="/publication/nat_commun_2021/featured_hu0afac48ac279d00f182b8cfc851a6a3a_689597_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="A model for the fragmentation kinetics of crumpled thin sheets" loading="lazy"></div>
   </a>
   
 
@@ -954,7 +954,7 @@
   
   
   <a href="/publication/sci_adv_2019/">
-    <div class="img-hover-zoom"><img src="/publication/sci_adv_2019/featured_hu85ca486e2f6d464eef45697c09353720_1307298_808x455_fill_q75_lanczos_smart1.jpg" class="article-banner" alt="Machine learning in a data-limited regime: Augmenting experiments with synthetic data uncovers order in crumpled sheets" loading="lazy"></div>
+    <div class="img-hover-zoom"><img src="/publication/sci_adv_2019/featured_hu438a6dac8c1ce42ea4c3f3d4801ade47_549902_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="Machine learning in a data-limited regime: Augmenting experiments with synthetic data uncovers order in crumpled sheets" loading="lazy"></div>
   </a>
   
 
@@ -1086,7 +1086,7 @@
   
   
   <a href="/publication/comm_phys_2018/">
-    <div class="img-hover-zoom"><img src="/publication/comm_phys_2018/featured_hu85ca486e2f6d464eef45697c09353720_449972_808x455_fill_q75_lanczos_smart1.jpg" class="article-banner" alt="A state variable for crumpled thin sheets" loading="lazy"></div>
+    <div class="img-hover-zoom"><img src="/publication/comm_phys_2018/featured_hub11f1c0095ba5d46609668e168d0304c_336667_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="A state variable for crumpled thin sheets" loading="lazy"></div>
   </a>
   
 
@@ -1218,7 +1218,7 @@
   
   
   <a href="/publication/arxiv_2020/">
-    <div class="img-hover-zoom"><img src="/publication/arxiv_2020/featured_hub2ae60614d2fd7c8ac3f6607d612a108_790991_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="Machine learning spectral indicators of topology" loading="lazy"></div>
+    <div class="img-hover-zoom"><img src="/publication/arxiv_2020/featured_hu5c5dad14f55cdeb7dac2df55cc24b016_893205_808x455_fill_lanczos_smart1_3.png" class="article-banner" alt="Machine learning spectral indicators of topology" loading="lazy"></div>
   </a>
   
 
