--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
       
       <img class="avatar avatar-circle"
            width="270" height="270"
-           src="/authors/admin/avatar_hu323b48cd362fa81e6f4359eed091efb0_468108_270x270_fill_q75_lanczos_center.jpg" alt="Jovana Andrejevic">
+           src="/authors/admin/avatar_hu1857f2ae3316de2e3e0937184dc667a4_2979257_270x270_fill_q75_lanczos_center.JPG" alt="Jovana Andrejevic">
       
 
       <div class="portrait-title">
