Updating fragmentation model

--- a/project/crumpling_sim/index.html
+++ b/project/crumpling_sim/index.html
@@ -950,7 +950,7 @@
     <h3>Related</h3>
     <ul>
       
-      <li><a href="/project/fragmentation_model/">Fragmentation-inspired model of crumpling</a></li>
+      <li><a href="/project/fragmentation_model/">Statistical properties of crumpled sheets</a></li>
       
     </ul>
   </div>
