--- a/index.html
+++ b/index.html
@@ -1194,7 +1194,7 @@
     
     <a href="/project/fragmentation_model/"  class="summary-link">
       <div class="article-style">
-        A major component of my research has been understanding the statistical properties of crumpled sheets, as well as the processes that can produce such statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball.
+        A key aspect of my research has been to better understand the statistical properties of crumpled sheets, as well as the mechanisms that can produce these statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball.
       </div>
     </a>
     
