--- a/project/fragmentation_model/index.html
+++ b/project/fragmentation_model/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="A major component of my research has been understanding the statistical properties of crumpled sheets, as well as the processes that can produce such statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball." />
+  <meta name="description" content="A key aspect of my research has been to better understand the statistical properties of crumpled sheets, as well as the mechanisms that can produce these statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball." />
 
   
   <link rel="alternate" hreflang="en-us" href="https://jandrejevic12.github.io/project/fragmentation_model/" />
@@ -297,7 +297,7 @@
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://jandrejevic12.github.io/project/fragmentation_model/" />
   <meta property="og:title" content="Statistical properties of crumpled sheets | Academic" />
-  <meta property="og:description" content="A major component of my research has been understanding the statistical properties of crumpled sheets, as well as the processes that can produce such statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball." /><meta property="og:image" content="https://jandrejevic12.github.io/project/fragmentation_model/featured.png" />
+  <meta property="og:description" content="A key aspect of my research has been to better understand the statistical properties of crumpled sheets, as well as the mechanisms that can produce these statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball." /><meta property="og:image" content="https://jandrejevic12.github.io/project/fragmentation_model/featured.png" />
     <meta property="twitter:image" content="https://jandrejevic12.github.io/project/fragmentation_model/featured.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -352,7 +352,7 @@
       "url": "https://jandrejevic12.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png"
     }
   },
-  "description": "A major component of my research has been understanding the statistical properties of crumpled sheets, as well as the processes that can produce such statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball."
+  "description": "A key aspect of my research has been to better understand the statistical properties of crumpled sheets, as well as the mechanisms that can produce these statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball."
 }
 </script>
 
@@ -803,7 +803,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <p>A major component of my research has been understanding the statistical properties of crumpled sheets, as well as the processes that can produce such statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball. If the crumpled sheet is opened up, we will observe a complex network of creases where stresses sharply focused during compaction, introducing permanent, plastic deformation. We might ask how the amount of damage introduced varies with the strength of compaction, or how it is distributed spatially across the sheet.</p>
+      <p>A key aspect of my research has been to better understand the statistical properties of crumpled sheets, as well as the mechanisms that can produce these statistics. As a familiar example, consider the process of crumpling a sheet of paper into a ball. Upon opening the sheet, we observe a complex network of creases where stresses sharply focused during compaction, introducing permanent, plastic deformation. We might ask how the amount of damage introduced varies with the strength of compaction, or how it is distributed spatially across the sheet.</p>
 
 
 
@@ -822,11 +822,11 @@
 <video autoplay loop  >
   <source src="/project/fragmentation_model/unfold.mp4" type="video/mp4">
 </video>
-<p>Crumpling is a ubiquitous phenomenon that can be observed on many different length scales, from the scale of graphene membranes up to the deformation of the earth’s crust. And while crumpling might seem an unwelcome deformation at first glance, the properties of crumpled structures can offer a number of practical advantages due to their porosity, compression-resistance, shapeability, and lightweight nature. One exciting application of crumpling is in the context of batteries and supercapacitors: Crumpled graphene electrodes are shown to have higher electrochemical surface area and resistance to aggregation owing to the high porosity and rigidity of the crumpled state<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>. From a scientific perspective, crumpling has garnered wide interest due to surprisingly predictable behavior observed amidst this very disordered process. For example, crumpled sheets exhibit slow, or logarithmic relaxation, which can be observed by tracking how the height of a crumpled ball changes after a change in the applied weight<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>. Crumpled sheets also show predictable memory effects and aging, which is a history dependence in their relaxation<sup id="fnref:3"><a href="#fn:3" class="footnote-ref" role="doc-noteref">3</a></sup>.</p>
-<p>Consider the simple crumpled ball experiment once again. If we crumple the same unfolded sheet a second time, new creases will develop, but we expect the sheet to accumulate less additional damage as it can exploit some of its existing creases during crumpling. A natural question we might ask is whether there is a rule for how such damage accumulates under repeated loading. Building on this idea, the experimental research group of Prof. Shmuel Rubinstein conducted studies of systematic crumpling by compressing a rolled sheet of Mylar with a cylindrical piston to a fixed compaction ratio, unfolding the sheet, and repeating the process. They discovered that when the total crease length accumulated is viewed as a function of crumpling iterations, the growth follows a simple logarithm<sup id="fnref:4"><a href="#fn:4" class="footnote-ref" role="doc-noteref">4</a></sup>:</p>
+<p>Crumpling is a ubiquitous phenomenon that can be observed on many different length scales, from the scale of graphene membranes up to the deformation of the earth’s crust. And while crumpling might seem an unwelcome deformation at first glance, the properties of crumpled structures can offer a number of practical advantages due to their porosity, compression-resistance, shapeability, and lightweight nature. For instance, one exciting application of crumpling is in the context of batteries and supercapacitors: Crumpled graphene electrodes are shown to have higher electrochemical surface area and resistance to aggregation owing to the high porosity and rigidity of the crumpled state<sup id="fnref:1"><a href="#fn:1" class="footnote-ref" role="doc-noteref">1</a></sup>.</p>
+<p>From a scientific perspective, crumpling has garnered wide interest due to surprisingly predictable behavior that can be observed amidst this very disordered process. Let&rsquo;s consider the simple crumpled ball experiment once again. If we crumple the same unfolded sheet a second time, new creases will develop; however, we expect the sheet to accumulate less additional damage, as it can exploit some of its existing creases during crumpling. A natural question we might ask is whether there is a rule for how such damage accumulates under repeated loading. Building on this idea, the experimental research group of Prof. Shmuel Rubinstein conducted studies of systematic crumpling by compressing a rolled sheet of Mylar with a cylindrical piston to a fixed compaction ratio, unfolding the sheet, and repeating the process. They discovered that when the total crease length accumulated is viewed as a function of crumpling iterations, the growth follows a simple logarithm<sup id="fnref:2"><a href="#fn:2" class="footnote-ref" role="doc-noteref">2</a></sup>:</p>
 <p>$$\ell(n,\tilde{\Delta}) = c_1\left(1-\tilde{\Delta}\right)\log\left(1+c_2\frac{n}{\tilde{\Delta}}\right).$$</p>
-<p>In the equation above, $\ell$ denotes total crease length, $n$ the number of crumpling iterations, and $\tilde{\Delta}$ the compaction ratio, which is the ratio of final to initial height of the piston. $c_1$ and $c_2$ are global fitting parameters. Moreover, this trend was robust to varying compaction ratio and initial preparations of the sheet, including pre-folding or hand-crumpling before repeated compaction.</p>
-<p>The logarithmic scaling was a remarkable reduction of complexity in characterizing crumpling. However, a physical justification for this mathematical model was missing: Can we explain why a logarithmic relationship, in particular, arises from this process? Furthermore, why is the scaling insensitive to the spatial details of the crease network? This motivated our follow-up work to try and explain this on physical grounds<sup id="fnref:5"><a href="#fn:5" class="footnote-ref" role="doc-noteref">5</a></sup>. To do this, we began by recognizing that as a sheet accumulates more creases over time, its surface area remains constant. Thus, rather than observing a quantity that continues to grow over time - the total crease length - we could instead look at a complementary quantity that remains invariant - the sum of individual facet areas. While automated methods were satisfactory, we found it valuable to perform the facet segmentations by hand, to ensure even the smallest facets were identified, and imaging artifacts such as faint or disconnected creases could be corrected. The facet segmentations then allowed us to observe the facet size distribution of each sheet, as well as its evolution over a series of crumples.</p>
+<p>In the equation above, $\ell$ denotes total crease length, $n$ the number of crumpling iterations, and $\tilde{\Delta}$ the compaction ratio, which is the ratio of final to initial height of the piston. $c_1$ and $c_2$ are global fitting parameters. Surprisingly, this trend was robust to varying compaction ratio and initial preparations of the sheet, including pre-folding or hand-crumpling the sheet before repeated compaction.</p>
+<p>The logarithmic scaling was a remarkable reduction of complexity in characterizing crumpling. However, a physical justification for this mathematical model was missing: Can we explain why a logarithmic relationship, in particular, arises from this process? This question motivated our follow-up work to try and explain the origin of logarithmic growth on physical grounds<sup id="fnref:3"><a href="#fn:3" class="footnote-ref" role="doc-noteref">3</a></sup>. We began by recognizing that as a sheet accumulates more creases over time, its surface area remains constant. Thus, rather than observing a quantity that continues to grow over time - the total crease length - we could instead look at a complementary quantity that remains invariant - the sum of individual facet areas. We found it valuable to perform the facet segmentations by hand, to ensure even the smallest facets were identified, and imaging artifacts such as faint or disconnected creases could be corrected. The facet segmentations then allowed us to observe the facet size distribution of each sheet, as well as its evolution over a series of crumples.</p>
 
 
 
@@ -845,10 +845,10 @@
 <video autoplay loop  >
   <source src="/project/fragmentation_model/segmentation.mp4" type="video/mp4">
 </video>
-<p>We observed that these characteristic size distributions could be accurately explained by fragmentation theory, which has a rich history in modeling natural breakup phenomena such as the crushing of rock or fragmentation of volcanic debris. Such a fragmentation process can be represented by an integro-differential equation that captures the evolution of the fragment size distribution over time<sup id="fnref:6"><a href="#fn:6" class="footnote-ref" role="doc-noteref">6</a></sup>:</p>
+<p>We observed that these characteristic size distributions could be accurately explained by fragmentation theory, which has a rich history in modeling natural breakup phenomena such as the crushing of rock or fragmentation of volcanic debris. Fragmentation processes can be represented by an integro-differential equation that captures the evolution of the fragment size distribution over time as follows<sup id="fnref:4"><a href="#fn:4" class="footnote-ref" role="doc-noteref">4</a></sup>:</p>
 <p>$$\frac{\partial{c(x,t)}}{\partial{t}}=-r(x)c(x,t) + \int_x^{\infty}r(y)c(y,t)f(x|y)dy$$</p>
 <p>In the equation above, $c(x,t)$ represents the number or concentration of fragments with size $x$ at time $t$, and $r(x)$ and $f(x|y)$ are the overall breakup rate and conditional breakup probability, respectively. With appropriate choices of $r(x)$ and $f(x|y)$ inferred from experimental data, the above equation can be solved exactly, with $c(x,t)$ in agreement with the observed facet size distributions. Building on the fragmentation theory framework, we likewise introduced a model for how the accumulation of damage slows down over repeated crumpling, as the average facet size becomes smaller. This allowed us to explain the logarithmic scaling seen in experiment.</p>
-<p>The application of fragmentation theory to crumpling is compelling, as it offers a new perspective on a well-studied system while drawing connections to other disordered processes. Future work could explore the extent to which fragmentation theory can more broadly model damage and failure in other systems.</p>
+<p>The application of fragmentation theory to understand crumpling is compelling, as it offers a new perspective on a well-studied system while drawing connections to other disordered processes. Future work could explore the extent to which fragmentation theory can more broadly model damage and failure in other systems.</p>
 <p>To learn more about this project, please see the relevant publications:
 
 
@@ -1029,19 +1029,13 @@
 <p>Luo, Jiayan, et al. &ldquo;Compression and aggregation-resistant particles of crumpled soft sheets.&rdquo; <em>ACS Nano</em> 5.11 (2011): 8943-8949.&#160;<a href="#fnref:1" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 <li id="fn:2" role="doc-endnote">
-<p>Amir, Ariel, Yuval Oreg, and Yoseph Imry. &ldquo;On relaxations and aging of various glasses.&rdquo; <em>Proceedings of the National Academy of Sciences</em> 109.6 (2012): 1850-1855.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Gottesman, Omer, et al. &ldquo;A state variable for crumpled thin sheets.&rdquo; <em>Communications Physics</em> 1.1 (2018): 1-7.&#160;<a href="#fnref:2" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 <li id="fn:3" role="doc-endnote">
-<p>Lahini, Yoav, et al. &ldquo;Nonmonotonic aging and memory retention in disordered mechanical systems.&rdquo; <em>Physical Review Letters</em> 118.8 (2017): 085501.&#160;<a href="#fnref:3" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Andrejevic, Jovana, et al. &ldquo;A model for the fragmentation kinetics of crumpled thin sheets.&rdquo; <em>Nature Communications</em> 12.1 (2021): 1-10.&#160;<a href="#fnref:3" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 <li id="fn:4" role="doc-endnote">
-<p>Gottesman, Omer, et al. &ldquo;A state variable for crumpled thin sheets.&rdquo; <em>Communications Physics</em> 1.1 (2018): 1-7.&#160;<a href="#fnref:4" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
-</li>
-<li id="fn:5" role="doc-endnote">
-<p>Andrejevic, Jovana, et al. &ldquo;A model for the fragmentation kinetics of crumpled thin sheets.&rdquo; <em>Nature Communications</em> 12.1 (2021): 1-10.&#160;<a href="#fnref:5" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
-</li>
-<li id="fn:6" role="doc-endnote">
-<p>Cheng, Z., and S. Redner. &ldquo;Kinetics of fragmentation.&rdquo; <em>Journal of Physics A: Mathematical and General</em> 23.7 (1990): 1233.&#160;<a href="#fnref:6" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
+<p>Cheng, Z., and S. Redner. &ldquo;Kinetics of fragmentation.&rdquo; <em>Journal of Physics A: Mathematical and General</em> 23.7 (1990): 1233.&#160;<a href="#fnref:4" class="footnote-backref" role="doc-backlink">&#x21a9;&#xfe0e;</a></p>
 </li>
 </ol>
 </section>
