Gen Art workshop updates.

--- a/project/generative_art/index.html
+++ b/project/generative_art/index.html
@@ -845,7 +845,7 @@
 
     <div class="article-style">
       <p>Together with Nina Andrejevic, George Varnavides, and Amina Matt, I helped to design and co-facilitate a winter workshop on generative art at MIT in January of 2020. The course emphasizes mathematical and natural examples of pattern formation such as fractals, cellular automata, swarming and self-organization, and emergent structure in reaction-diffusion processes. The content of the course includes both relevant theory behind these examples, as well as effective strategies for implementation in code.</p>
-<p>Material from past iterations can be found on the course&rsquo;s <a href="https://github.com/gvarnavi/generative-art-iap" target="_blank" rel="noopener">Github repository</a>.</p>
+<p>Material from the latest installment (2022) can be found on the course <a href="https://gvarnavides.com/generative-art-workshop-website" target="_blank" rel="noopener">website</a> and <a href="https://github.com/gvarnavi/generative-art-iap" target="_blank" rel="noopener">Github repository</a>.</p>
 
 
 
