--- a/publication/index.html
+++ b/publication/index.html
@@ -30,7 +30,7 @@
   
     
   
-  <meta name="description" content="PhD Student" />
+  <meta name="description" content="Postdoctoral Researcher" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://jandrejevic12.github.io/publication/" />
@@ -300,7 +300,7 @@
   <meta property="og:site_name" content="Jovana Andrejevic" />
   <meta property="og:url" content="https://jandrejevic12.github.io/publication/" />
   <meta property="og:title" content="Publications | Jovana Andrejevic" />
-  <meta property="og:description" content="PhD Student" /><meta property="og:image" content="https://jandrejevic12.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Postdoctoral Researcher" /><meta property="og:image" content="https://jandrejevic12.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://jandrejevic12.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
