--- a/publication/adv_mat_2022/index.html
+++ b/publication/adv_mat_2022/index.html
@@ -832,6 +832,10 @@
 
 
 
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://doi.org/10.1002/adma.202204113" target="_blank" rel="noopener">
+  DOI
+</a>
+
 
 
 </div>
